--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 node_modules/
 dist/
 build/
+.next/
 
 # Logs
 logs
@@ -26,3 +27,6 @@ pnpm-debug.log*
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+
+.env
+!/challenges/nestjs/.env
